# CastIt

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
src/: main.cpp
src/core/: cast_controller.cpp  cast_controller.h  device_discovery.cpp  device_discovery.h  dlna_controller.cpp  dlna_controller.h  dlna_discovery.cpp  dlna_discovery.h
src/ui/: main_window.cpp  main_window.h  main_window.ui
